--- a/about.html
+++ b/about.html
@@ -9,26 +9,27 @@
 <meta property="og:title" content="About Srinidhii Sreeram — Bharatanatyam Artist">
 <meta property="og:description" content="Biography, training and artistic journey of Bharatanatyam dancer and teacher Srinidhii Sreeram.">
 <meta property="og:type" content="website">
-<meta property="og:image" content="assets/img/srinidhii-1-1600.webp">
+<meta property="og:image" content="srinidhii-1-1600.webp">
+<meta name="twitter:card" content="summary_large_image">
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🩰</text></svg>">
 <script src="https://cdn.tailwindcss.com"></script>
-<script type="application/ld+json">{"@context": "https://schema.org", "@type": "Person", "name": "Srinidhii Sreeram", "jobTitle": "Bharatanatyam Artist", "knowsAbout": ["Bharatanatyam", "Indian classical dance", "Abhinaya", "Nritta"], "image": "assets/img/srinidhii-1-1600.webp", "url": "index.html"}</script>
+<script type="application/ld+json">{"@context": "https://schema.org", "@type": "Person", "name": "Srinidhii Sreeram", "jobTitle": "Bharatanatyam Artist", "knowsAbout": ["Bharatanatyam", "Indian classical dance", "Abhinaya", "Nritta"], "image": "srinidhii-1-1600.webp", "url": "index.html"}</script>
 </head>
-<body class="bg-[#fffaf3] text-gray-900 antialiased">
-<header class="sticky top-0 z-30 bg-[#fffaf3]/90 backdrop-blur border-b border-amber-200">
+<body class="bg-[#FFF8F0] text-gray-900 antialiased">
+<header class="sticky top-0 z-30 bg-[#FFF8F0]/90 backdrop-blur border-b border-[#E6D5AC]">
   <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
     <a href="index.html" class="font-serif text-xl md:text-2xl tracking-wide">Srinidhii Sreeram</a>
     <nav class="space-x-4 text-sm md:text-base">
-      <a href="about.html" class="hover:text-amber-800">About</a>
-      <a href="performances.html" class="hover:text-amber-800">Performances</a>
-      <a href="classes.html" class="hover:text-amber-800">Classes</a>
-      <a href="bookings.html" class="hover:text-amber-800">Bookings</a>
-      <a href="contact.html" class="inline-block bg-amber-700 text-white px-3 py-1.5 rounded-lg hover:bg-amber-800">Contact</a>
+      <a href="about.html" class="hover:text-[#7A1F2B]">About</a>
+      <a href="performances.html" class="hover:text-[#7A1F2B]">Performances</a>
+      <a href="classes.html" class="hover:text-[#7A1F2B]">Classes</a>
+      <a href="bookings.html" class="hover:text-[#7A1F2B]">Bookings</a>
+      <a href="contact.html" class="inline-block bg-[#7A1F2B] text-white px-3 py-1.5 rounded-lg hover:bg-[#641622]">Contact</a>
     </nav>
   </div>
 </header>
 
-<main class="max-w-4xl mx-auto px-4 py-12 prose prose-amber">
+<main class="max-w-4xl mx-auto px-4 py-12 prose">
   <h1>About Srinidhii Sreeram</h1>
   <p>Srinidhii Sreeram is a senior disciple of <em>Kalaimamani Smt. Padmini Krishnamurthy</em>, Director Sri Saraswathi Gana Nilayam, Chennai & Sri Saraswathi Natyalaya, Muscat. Beginning at age six, she has nurtured her craft through numerous recitals as part of the institution.</p>
   <p>Her <strong>Arangetram</strong> took place in July 2013 in the august presence of Late Guru Ranganayaki Jayaraman and Smt. Nandini Ramani. Since then, she has presented solo and group works in India, Muscat, Dubai, the USA, and the UK. Audiences and mentors recognise her strong grasp of rhythm, expressive abhinaya, and energetic stage presence.</p>
@@ -42,7 +43,7 @@
   <p>Srinidhii has been actively involved in teaching from early on, training students within the institution and independently. Her approach blends clear technique, attention to each student’s strengths, and a joyful, focused learning environment for children and adults alike.</p>
 </main>
 
-<footer class="mt-16 border-t border-amber-200">
+<footer class="mt-16 border-t border-[#E6D5AC]">
   <div class="max-w-6xl mx-auto px-4 py-8 grid md:grid-cols-3 gap-6 text-sm">
     <div>
       <div class="font-semibold">Based in London</div>
@@ -51,15 +52,15 @@
     <div>
       <div class="font-semibold">Quick Links</div>
       <ul class="space-y-1 mt-2">
-        <li><a class="hover:text-amber-800" href="classes.html">Bharatanatyam Classes</a></li>
-        <li><a class="hover:text-amber-800" href="performances.html">Performance Gallery</a></li>
-        <li><a class="hover:text-amber-800" href="bookings.html">Book for Events</a></li>
+        <li><a class="hover:text-[#7A1F2B]" href="classes.html">Bharatanatyam Classes</a></li>
+        <li><a class="hover:text-[#7A1F2B]" href="performances.html">Performance Gallery</a></li>
+        <li><a class="hover:text-[#7A1F2B]" href="bookings.html">Book for Events</a></li>
       </ul>
     </div>
     <div>
       <div class="font-semibold">Contact</div>
-      <div>Email: <a class="underline" href="mailto:book@srinidhiisreeram.com">book@srinidhiisreeram.com</a></div>
-      <div>Instagram: <a class="underline" href="#">@srinidhiisreeram</a></div>
+      <div>Email: <a class="underline decoration-[#C6A34F] underline-offset-2" href="mailto:book@srinidhiisreeram.com">book@srinidhiisreeram.com</a></div>
+      <div>Instagram: <a class="underline decoration-[#C6A34F] underline-offset-2" href="#">@srinidhiisreeram</a></div>
     </div>
   </div>
   <div class="text-center text-xs text-gray-500 pb-6">© Srinidhii Sreeram London</div>
