--- a/classes.html
+++ b/classes.html
@@ -9,22 +9,23 @@
 <meta property="og:title" content="Bharatanatyam Classes in London — Srinidhii Sreeram">
 <meta property="og:description" content="Bharatanatyam dance classes in London for children and adults with Srinidhii Sreeram.">
 <meta property="og:type" content="website">
-<meta property="og:image" content="assets/img/srinidhii-1-1600.webp">
+<meta property="og:image" content="srinidhii-1-1600.webp">
+<meta name="twitter:card" content="summary_large_image">
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🩰</text></svg>">
 <script src="https://cdn.tailwindcss.com"></script>
-<script type="application/ld+json">{"@context": "https://schema.org", "@type": "Person", "name": "Srinidhii Sreeram", "jobTitle": "Bharatanatyam Artist", "knowsAbout": ["Bharatanatyam", "Indian classical dance", "Abhinaya", "Nritta"], "image": "assets/img/srinidhii-1-1600.webp", "url": "index.html"}</script>
+<script type="application/ld+json">{"@context": "https://schema.org", "@type": "Person", "name": "Srinidhii Sreeram", "jobTitle": "Bharatanatyam Artist", "knowsAbout": ["Bharatanatyam", "Indian classical dance", "Abhinaya", "Nritta"], "image": "srinidhii-1-1600.webp", "url": "index.html"}</script>
 <script type="application/ld+json">{"@context": "https://schema.org", "@type": "Course", "name": "Bharatanatyam Classes (Kids & Adults)", "description": "Foundations, adavus, rhythm and abhinaya with Srinidhii Sreeram.", "provider": {"@type": "Person", "name": "Srinidhii Sreeram"}}</script>
 </head>
-<body class="bg-[#fffaf3] text-gray-900 antialiased">
-<header class="sticky top-0 z-30 bg-[#fffaf3]/90 backdrop-blur border-b border-amber-200">
+<body class="bg-[#FFF8F0] text-gray-900 antialiased">
+<header class="sticky top-0 z-30 bg-[#FFF8F0]/90 backdrop-blur border-b border-[#E6D5AC]">
   <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
     <a href="index.html" class="font-serif text-xl md:text-2xl tracking-wide">Srinidhii Sreeram</a>
     <nav class="space-x-4 text-sm md:text-base">
-      <a href="about.html" class="hover:text-amber-800">About</a>
-      <a href="performances.html" class="hover:text-amber-800">Performances</a>
-      <a href="classes.html" class="hover:text-amber-800">Classes</a>
-      <a href="bookings.html" class="hover:text-amber-800">Bookings</a>
-      <a href="contact.html" class="inline-block bg-amber-700 text-white px-3 py-1.5 rounded-lg hover:bg-amber-800">Contact</a>
+      <a href="about.html" class="hover:text-[#7A1F2B]">About</a>
+      <a href="performances.html" class="hover:text-[#7A1F2B]">Performances</a>
+      <a href="classes.html" class="hover:text-[#7A1F2B]">Classes</a>
+      <a href="bookings.html" class="hover:text-[#7A1F2B]">Bookings</a>
+      <a href="contact.html" class="inline-block bg-[#7A1F2B] text-white px-3 py-1.5 rounded-lg hover:bg-[#641622]">Contact</a>
     </nav>
   </div>
 </header>
@@ -50,10 +51,10 @@
       <p class="text-sm mt-2">Beginner & intermediate batches; fitness-friendly and expressive work.</p>
     </div>
   </div>
-  <a href="contact.html" class="inline-block mt-6 bg-amber-700 text-white px-4 py-2 rounded-lg hover:bg-amber-800">Enquire about Classes</a>
+  <a href="contact.html" class="inline-block mt-6 bg-[#7A1F2B] text-white px-4 py-2 rounded-lg hover:bg-[#641622]">Enquire about Classes</a>
 </main>
 
-<footer class="mt-16 border-t border-amber-200">
+<footer class="mt-16 border-t border-[#E6D5AC]">
   <div class="max-w-6xl mx-auto px-4 py-8 grid md:grid-cols-3 gap-6 text-sm">
     <div>
       <div class="font-semibold">Based in London</div>
@@ -62,15 +63,15 @@
     <div>
       <div class="font-semibold">Quick Links</div>
       <ul class="space-y-1 mt-2">
-        <li><a class="hover:text-amber-800" href="classes.html">Bharatanatyam Classes</a></li>
-        <li><a class="hover:text-amber-800" href="performances.html">Performance Gallery</a></li>
-        <li><a class="hover:text-amber-800" href="bookings.html">Book for Events</a></li>
+        <li><a class="hover:text-[#7A1F2B]" href="classes.html">Bharatanatyam Classes</a></li>
+        <li><a class="hover:text-[#7A1F2B]" href="performances.html">Performance Gallery</a></li>
+        <li><a class="hover:text-[#7A1F2B]" href="bookings.html">Book for Events</a></li>
       </ul>
     </div>
     <div>
       <div class="font-semibold">Contact</div>
-      <div>Email: <a class="underline" href="mailto:book@srinidhiisreeram.com">book@srinidhiisreeram.com</a></div>
-      <div>Instagram: <a class="underline" href="#">@srinidhiisreeram</a></div>
+      <div>Email: <a class="underline decoration-[#C6A34F] underline-offset-2" href="mailto:book@srinidhiisreeram.com">book@srinidhiisreeram.com</a></div>
+      <div>Instagram: <a class="underline decoration-[#C6A34F] underline-offset-2" href="#">@srinidhiisreeram</a></div>
     </div>
   </div>
   <div class="text-center text-xs text-gray-500 pb-6">© Srinidhii Sreeram London</div>
