--- a/index.html
+++ b/index.html
@@ -9,34 +9,35 @@
 <meta property="og:title" content="Srinidhii Sreeram — Bharatanatyam Artist & Teacher in London">
 <meta property="og:description" content="Bharatanatyam performer and teacher in London. Classes for children and adults; bookings for performances, workshops, and lecture-demonstrations.">
 <meta property="og:type" content="website">
-<meta property="og:image" content="assets/img/srinidhii-1-1600.webp">
+<meta property="og:image" content="srinidhii-1-1600.webp">
+<meta name="twitter:card" content="summary_large_image">
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🩰</text></svg>">
 <script src="https://cdn.tailwindcss.com"></script>
-<script type="application/ld+json">{"@context": "https://schema.org", "@type": "Person", "name": "Srinidhii Sreeram", "jobTitle": "Bharatanatyam Artist", "knowsAbout": ["Bharatanatyam", "Indian classical dance", "Abhinaya", "Nritta"], "image": "assets/img/srinidhii-1-1600.webp", "url": "index.html"}</script>
+<script type="application/ld+json">{"@context": "https://schema.org", "@type": "Person", "name": "Srinidhii Sreeram", "jobTitle": "Bharatanatyam Artist", "knowsAbout": ["Bharatanatyam", "Indian classical dance", "Abhinaya", "Nritta"], "image": "srinidhii-1-1600.webp", "url": "index.html"}</script>
 </head>
-<body class="bg-[#fffaf3] text-gray-900 antialiased">
-<header class="sticky top-0 z-30 bg-[#fffaf3]/90 backdrop-blur border-b border-amber-200">
+<body class="bg-[#FFF8F0] text-gray-900 antialiased">
+<header class="sticky top-0 z-30 bg-[#FFF8F0]/90 backdrop-blur border-b border-[#E6D5AC]">
   <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
     <a href="index.html" class="font-serif text-xl md:text-2xl tracking-wide">Srinidhii Sreeram</a>
     <nav class="space-x-4 text-sm md:text-base">
-      <a href="about.html" class="hover:text-amber-800">About</a>
-      <a href="performances.html" class="hover:text-amber-800">Performances</a>
-      <a href="classes.html" class="hover:text-amber-800">Classes</a>
-      <a href="bookings.html" class="hover:text-amber-800">Bookings</a>
-      <a href="contact.html" class="inline-block bg-amber-700 text-white px-3 py-1.5 rounded-lg hover:bg-amber-800">Contact</a>
+      <a href="about.html" class="hover:text-[#7A1F2B]">About</a>
+      <a href="performances.html" class="hover:text-[#7A1F2B]">Performances</a>
+      <a href="classes.html" class="hover:text-[#7A1F2B]">Classes</a>
+      <a href="bookings.html" class="hover:text-[#7A1F2B]">Bookings</a>
+      <a href="contact.html" class="inline-block bg-[#7A1F2B] text-white px-3 py-1.5 rounded-lg hover:bg-[#641622]">Contact</a>
     </nav>
   </div>
 </header>
 
 <section class="relative">
-  <img src="assets/img/srinidhii-1-1600.webp" alt="Bharatanatyam performance by Srinidhii Sreeram" class="w-full h-[60vh] object-cover brightness-75">
+  <img src="srinidhii-1-1600.webp" alt="Bharatanatyam performance by Srinidhii Sreeram" class="w-full h-[60vh] object-cover brightness-75">
   <div class="absolute inset-0 flex items-center">
     <div class="max-w-6xl mx-auto px-4">
       <h1 class="text-white text-3xl md:text-5xl font-serif drop-shadow">Bharatanatyam Artist & Teacher in London</h1>
       <p class="text-white/95 mt-3 max-w-2xl">Bharatanatyam performer and teacher in London. Classes for children and adults; bookings for performances, workshops, and lecture-demonstrations.</p>
       <div class="mt-6 space-x-3">
-        <a href="classes.html" class="bg-amber-600 text-white px-4 py-2 rounded-lg hover:bg-amber-700">Enquire about Classes</a>
-        <a href="bookings.html" class="bg-white text-amber-800 px-4 py-2 rounded-lg hover:bg-amber-50 border border-amber-700">Book a Performance</a>
+        <a href="classes.html" class="bg-[#7A1F2B] text-white px-4 py-2 rounded-lg hover:bg-[#641622]">Enquire about Classes</a>
+        <a href="bookings.html" class="bg-white text-[#7A1F2B] px-4 py-2 rounded-lg hover:bg-[#FBF2DF] border border-[#7A1F2B]">Book a Performance</a>
       </div>
     </div>
   </div>
@@ -45,33 +46,35 @@
 <section class="max-w-6xl mx-auto px-4 py-12 grid md:grid-cols-2 gap-10">
   <div>
     <h2 class="font-serif text-2xl">About Srinidhii Sreeram</h2>
-    <p class="mt-3">Senior disciple of <em>Kalaimamani Smt. Padmini Krishnamurthy</em>, Director Sri Saraswathi Gana Nilayam, Chennai & Sri Saraswathi Natyalaya, Muscat. Srinidhii Sreeram began learning at the age of 6 and has since performed across India, Oman, Dubai, USA and the UK, including the prestigious Cleveland Thyagaraja Festival.</p>
+    <p class="mt-3">Senior disciple of <em>Kalaimamani Smt. Padmini Krishnamurthy</em>, Director Sri Saraswathi Gana Nilayam, Chennai & Sri Saraswathi Natyalaya, Muscat. Srinidhii Sreeram began learning at the age of 6 and has since performed across India, Oman, Dubai, the USA and the UK, including the prestigious Cleveland Thyagaraja Festival.</p>
     <p class="mt-3">Recognised with the <strong>Young Artist Grant (Government of Tamil Nadu)</strong> and graded by the Government of India. Completed all 6 levels of the Prayathnam Dance Examinations and conferred the title <strong>‘Yathna Praveena’</strong>.</p>
-    <a href="about.html" class="mt-4 inline-block text-amber-800 underline">Read full biography</a>
+    <a href="about.html" class="mt-4 inline-block text-[#7A1F2B] underline decoration-[#C6A34F] underline-offset-2">Read full biography</a>
   </div>
   <div class="grid grid-cols-2 gap-4">
-    <img src="assets/img/srinidhii-1-800.webp" class="rounded-xl shadow" alt="Srinidhii performing 1"><img src="assets/img/srinidhii-2-800.webp" class="rounded-xl shadow" alt="Srinidhii performing 2"><img src="assets/img/srinidhii-3-800.webp" class="rounded-xl shadow" alt="Srinidhii performing 3">
+    <img src="srinidhii-1-800.webp" class="rounded-xl shadow" alt="Srinidhii performing 1">
+    <img src="srinidhii-2-800.webp" class="rounded-xl shadow" alt="Srinidhii performing 2">
+    <img src="srinidhii-3-800.webp" class="rounded-xl shadow" alt="Srinidhii performing 3">
   </div>
 </section>
 
-<section class="bg-amber-50 border-y border-amber-200">
+<section class="bg-[#FBF2DF] border-y border-[#E6D5AC]">
   <div class="max-w-6xl mx-auto px-4 py-12">
     <h2 class="font-serif text-2xl">Offerings</h2>
     <div class="grid md:grid-cols-3 gap-6 mt-6">
       <div class="p-5 bg-white rounded-2xl shadow-sm border">
         <h3 class="font-semibold">Performances</h3>
         <p class="mt-2 text-sm">Solo and thematic productions for festivals, venues, and cultural events.</p>
-        <a href="bookings.html" class="mt-3 inline-block text-amber-800 underline">Request booking</a>
+        <a href="bookings.html" class="mt-3 inline-block text-[#7A1F2B] underline decoration-[#C6A34F] underline-offset-2">Request booking</a>
       </div>
       <div class="p-5 bg-white rounded-2xl shadow-sm border">
         <h3 class="font-semibold">Workshops & Lecture-Demos</h3>
         <p class="mt-2 text-sm">Educational sessions for schools, universities, and community groups.</p>
-        <a href="bookings.html" class="mt-3 inline-block text-amber-800 underline">Plan a workshop</a>
+        <a href="bookings.html" class="mt-3 inline-block text-[#7A1F2B] underline decoration-[#C6A34F] underline-offset-2">Plan a workshop</a>
       </div>
       <div class="p-5 bg-white rounded-2xl shadow-sm border">
         <h3 class="font-semibold">Classes</h3>
         <p class="mt-2 text-sm">Children (4+), teens & adults. In-person in London and online.</p>
-        <a href="classes.html" class="mt-3 inline-block text-amber-800 underline">Enquire about classes</a>
+        <a href="classes.html" class="mt-3 inline-block text-[#7A1F2B] underline decoration-[#C6A34F] underline-offset-2">Enquire about classes</a>
       </div>
     </div>
   </div>
@@ -86,7 +89,7 @@
   </ul>
 </section>
 
-<footer class="mt-16 border-t border-amber-200">
+<footer class="mt-16 border-t border-[#E6D5AC]">
   <div class="max-w-6xl mx-auto px-4 py-8 grid md:grid-cols-3 gap-6 text-sm">
     <div>
       <div class="font-semibold">Based in London</div>
@@ -95,15 +98,15 @@
     <div>
       <div class="font-semibold">Quick Links</div>
       <ul class="space-y-1 mt-2">
-        <li><a class="hover:text-amber-800" href="classes.html">Bharatanatyam Classes</a></li>
-        <li><a class="hover:text-amber-800" href="performances.html">Performance Gallery</a></li>
-        <li><a class="hover:text-amber-800" href="bookings.html">Book for Events</a></li>
+        <li><a class="hover:text-[#7A1F2B]" href="classes.html">Bharatanatyam Classes</a></li>
+        <li><a class="hover:text-[#7A1F2B]" href="performances.html">Performance Gallery</a></li>
+        <li><a class="hover:text-[#7A1F2B]" href="bookings.html">Book for Events</a></li>
       </ul>
     </div>
     <div>
       <div class="font-semibold">Contact</div>
-      <div>Email: <a class="underline" href="mailto:book@srinidhiisreeram.com">book@srinidhiisreeram.com</a></div>
-      <div>Instagram: <a class="underline" href="#">@srinidhiisreeram</a></div>
+      <div>Email: <a class="underline decoration-[#C6A34F] underline-offset-2" href="mailto:book@srinidhiisreeram.com">book@srinidhiisreeram.com</a></div>
+      <div>Instagram: <a class="underline decoration-[#C6A34F] underline-offset-2" href="#">@srinidhiisreeram</a></div>
     </div>
   </div>
   <div class="text-center text-xs text-gray-500 pb-6">© Srinidhii Sreeram London</div>
