--- a/about.html
+++ b/about.html
@@ -1,69 +1,11 @@
-<!doctype html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>About Srinidhii Sreeram — Bharatanatyam Artist</title>
-<meta name="description" content="Biography, training and artistic journey of Bharatanatyam dancer and teacher Srinidhii Sreeram.">
-<meta name="keywords" content="Bharatanatyam, Bharatanatyam London, Indian classical dance, Bharatanatyam classes London, Bharatanatyam performer London">
-<meta property="og:title" content="About Srinidhii Sreeram — Bharatanatyam Artist">
-<meta property="og:description" content="Biography, training and artistic journey of Bharatanatyam dancer and teacher Srinidhii Sreeram.">
-<meta property="og:type" content="website">
-<meta property="og:image" content="srinidhii-1-1600.webp">
-<meta name="twitter:card" content="summary_large_image">
-<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🩰</text></svg>">
-<script src="https://cdn.tailwindcss.com"></script>
-<script type="application/ld+json">{"@context": "https://schema.org", "@type": "Person", "name": "Srinidhii Sreeram", "jobTitle": "Bharatanatyam Artist", "knowsAbout": ["Bharatanatyam", "Indian classical dance", "Abhinaya", "Nritta"], "image": "srinidhii-1-1600.webp", "url": "index.html"}</script>
-</head>
-<body class="bg-[#FFF8F0] text-gray-900 antialiased">
-<header class="sticky top-0 z-30 bg-[#FFF8F0]/90 backdrop-blur border-b border-[#E6D5AC]">
-  <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
-    <a href="index.html" class="font-serif text-xl md:text-2xl tracking-wide">Srinidhii Sreeram</a>
-    <nav class="space-x-4 text-sm md:text-base">
-      <a href="about.html" class="hover:text-[#7A1F2B]">About</a>
-      <a href="performances.html" class="hover:text-[#7A1F2B]">Performances</a>
-      <a href="classes.html" class="hover:text-[#7A1F2B]">Classes</a>
-      <a href="bookings.html" class="hover:text-[#7A1F2B]">Bookings</a>
-      <a href="contact.html" class="inline-block bg-[#7A1F2B] text-white px-3 py-1.5 rounded-lg hover:bg-[#641622]">Contact</a>
-    </nav>
-  </div>
-</header>
-
-<main class="max-w-4xl mx-auto px-4 py-12 prose">
-  <h1>About Srinidhii Sreeram</h1>
-  <p>Srinidhii Sreeram is a senior disciple of <em>Kalaimamani Smt. Padmini Krishnamurthy</em>, Director Sri Saraswathi Gana Nilayam, Chennai & Sri Saraswathi Natyalaya, Muscat. Beginning at age six, she has nurtured her craft through numerous recitals as part of the institution.</p>
-  <p>Her <strong>Arangetram</strong> took place in July 2013 in the august presence of Late Guru Ranganayaki Jayaraman and Smt. Nandini Ramani. Since then, she has presented solo and group works in India, Muscat, Dubai, the USA, and the UK. Audiences and mentors recognise her strong grasp of rhythm, expressive abhinaya, and energetic stage presence.</p>
-  <h2>Recognition</h2>
-  <ul>
-    <li>Young Artist Grant for Performing Arts — Government of Tamil Nadu</li>
-    <li>Graded Artist — Government of India</li>
-    <li>Prayathnam Examinations — Completed all 6 levels; title <em>Yathna Praveena</em> (2022)</li>
-  </ul>
-  <h2>Teaching</h2>
-  <p>Srinidhii has been actively involved in teaching from early on, training students within the institution and independently. Her approach blends clear technique, attention to each student’s strengths, and a joyful, focused learning environment for children and adults alike.</p>
-</main>
-
-<footer class="mt-16 border-t border-[#E6D5AC]">
-  <div class="max-w-6xl mx-auto px-4 py-8 grid md:grid-cols-3 gap-6 text-sm">
-    <div>
-      <div class="font-semibold">Based in London</div>
-      <div>Available for performances, workshops, and classes.</div>
-    </div>
-    <div>
-      <div class="font-semibold">Quick Links</div>
-      <ul class="space-y-1 mt-2">
-        <li><a class="hover:text-[#7A1F2B]" href="classes.html">Bharatanatyam Classes</a></li>
-        <li><a class="hover:text-[#7A1F2B]" href="performances.html">Performance Gallery</a></li>
-        <li><a class="hover:text-[#7A1F2B]" href="bookings.html">Book for Events</a></li>
-      </ul>
-    </div>
-    <div>
-      <div class="font-semibold">Contact</div>
-      <div>Email: <a class="underline decoration-[#C6A34F] underline-offset-2" href="mailto:book@srinidhiisreeram.com">book@srinidhiisreeram.com</a></div>
-      <div>Instagram: <a class="underline decoration-[#C6A34F] underline-offset-2" href="#">@srinidhiisreeram</a></div>
-    </div>
-  </div>
-  <div class="text-center text-xs text-gray-500 pb-6">© Srinidhii Sreeram London</div>
-</footer>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>About — Srinidhii Sreeram</title><meta name="description" content="Biography and artistic journey"><meta property="og:title" content="About — Srinidhii Sreeram"><meta property="og:description" content="Biography and artistic journey"><meta property="og:image" content="assets/img/ppt-10822f32fe.png"><meta name="twitter:card" content="summary_large_image"><script src="https://cdn.tailwindcss.com"></script><style>:root{--bg:#FFF8F0;--maroon:#7A1F2B;--maroon-d:#641622;--gold:#C6A34F;--line:#E6D5AC;}
+body{background:var(--bg);}
+hr.kolam{border:0;height:1px;background:linear-gradient(90deg,transparent,var(--gold),transparent);}
+.link-gold{text-decoration:underline;text-decoration-color:var(--gold);text-underline-offset:3px;}
+.btn-primary{background:var(--maroon);color:#fff;border-radius:0.6rem;padding:.6rem 1rem;}
+.btn-primary:hover{background:var(--maroon-d);}
+.card{background:#fff;border:1px solid var(--line);border-radius:1rem;padding:1rem;box-shadow:0 4px 10px rgba(0,0,0,.04);}</style></head><body class="text-gray-900 antialiased">
+<header class="sticky top-0 z-30 bg-[var(--bg)]/95 backdrop-blur border-b border-[var(--line)]"><div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between"><a href="index.html" class="font-serif text-xl md:text-2xl tracking-wide">Srinidhii Sreeram</a><nav class="space-x-5 text-sm md:text-base"><a href="about.html" class="hover:text-[var(--maroon)]">About</a><a href="performances.html" class="hover:text-[var(--maroon)]">Featured Performances</a><a href="contact.html" class="btn-primary">Contact</a></nav></div></header><main class="max-w-4xl mx-auto px-4 py-12 prose"><h1>About Srinidhii Sreeram</h1><p>Srinidhii Sreeram is a senior disciple of Kalaimamani Smt. Padmini Krishnamurthy, Director Sri Saraswathi Gana Nilayam, Chennai & Sri Saraswathi Natyalaya , Muscat. Having begun her journey in the Indian classical art form at the age of 6, Srinidhii has since nurtured her craft and has been a part of numerous recitals staged as part of the dance school. Srinidhii gave her maiden performance ( Arangetram ) in July 2013 in the august presence of Late. Guru Kalaimamani Ranganayaki Jayaraman, and industry stalwart Smt. Nandini Ramani. She has since given various solo and group performances regularly in India, Muscat, Dubai, and USA. Most recently, she was invited to perform at the prestigious Cleveland Thyagaraja Festival, USA and has been recognized for her strong grasp of rhythm, expressive rendition of abhinaya, and energetic performances.</p><h2>Achievements & Teaching</h2><p>❖ Over the years, Srinidhi continued a holistic education in dance and completed all 6 levels of the Prayathnam Dance Examinations. In 2022, She was conferred the title - ‘ Yathna Praveena’
+❖ In recognition of her art, she was awarded the ‘Young Artist Grant for Performing Arts’ from the Government of Tamil Nadu and has been recognized as a Graded Artist by the Government of India.
+❖ Srinidhii began her teaching journey early on and has been instrumental in training students as part of the dance institution. Her style of teaching involves a knack for understanding her student’s strengths, a fun yet focussed approach to learning, and creating a space for creative exploration for children and adults alike</p></main>
+<footer class="mt-16 border-t border-[var(--line)]"><div class="max-w-6xl mx-auto px-4 py-8 grid md:grid-cols-3 gap-6 text-sm"><div><div class="font-semibold">Based in London</div><div>Performances • Workshops • Classes</div></div><div><div class="font-semibold">Explore</div><ul class="mt-2 space-y-1"><li><a class="hover:text-[var(--maroon)]" href="performances.html">Featured Performances</a></li><li><a class="hover:text-[var(--maroon)]" href="about.html">About</a></li></ul></div><div><div class="font-semibold">Contact</div><div>Email: <a class="link-gold" href="mailto:srinidhiisreeram@gmail.com">srinidhiisreeram@gmail.com</a></div><div>Instagram: <a class="link-gold" href="https://instagram.com/srinidhii.sreeram">@srinidhii.sreeram</a></div></div></div><div class="text-center text-xs text-gray-500 pb-6">© Srinidhii Sreeram</div></footer></body></html>
