--- a/contact.html
+++ b/contact.html
@@ -1,84 +1,9 @@
-<!doctype html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Contact — Srinidhii Sreeram</title>
-<meta name="description" content="Contact Bharatanatyam artist and teacher Srinidhii Sreeram for classes and bookings in London.">
-<meta name="keywords" content="Bharatanatyam, Bharatanatyam London, Indian classical dance, Bharatanatyam classes London, Bharatanatyam performer London">
-<meta property="og:title" content="Contact — Srinidhii Sreeram">
-<meta property="og:description" content="Contact Bharatanatyam artist and teacher Srinidhii Sreeram for classes and bookings in London.">
-<meta property="og:type" content="website">
-<meta property="og:image" content="srinidhii-1-1600.webp">
-<meta name="twitter:card" content="summary_large_image">
-<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🩰</text></svg>">
-<script src="https://cdn.tailwindcss.com"></script>
-<script type="application/ld+json">{"@context": "https://schema.org", "@type": "Person", "name": "Srinidhii Sreeram", "jobTitle": "Bharatanatyam Artist", "knowsAbout": ["Bharatanatyam", "Indian classical dance", "Abhinaya", "Nritta"], "image": "srinidhii-1-1600.webp", "url": "index.html"}</script>
-</head>
-<body class="bg-[#FFF8F0] text-gray-900 antialiased">
-<header class="sticky top-0 z-30 bg-[#FFF8F0]/90 backdrop-blur border-b border-[#E6D5AC]">
-  <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
-    <a href="index.html" class="font-serif text-xl md:text-2xl tracking-wide">Srinidhii Sreeram</a>
-    <nav class="space-x-4 text-sm md:text-base">
-      <a href="about.html" class="hover:text-[#7A1F2B]">About</a>
-      <a href="performances.html" class="hover:text-[#7A1F2B]">Performances</a>
-      <a href="classes.html" class="hover:text-[#7A1F2B]">Classes</a>
-      <a href="bookings.html" class="hover:text-[#7A1F2B]">Bookings</a>
-      <a href="contact.html" class="inline-block bg-[#7A1F2B] text-white px-3 py-1.5 rounded-lg hover:bg-[#641622]">Contact</a>
-    </nav>
-  </div>
-</header>
-
-<main class="max-w-3xl mx-auto px-4 py-12">
-  <h1 class="font-serif text-3xl">Contact</h1>
-  <p class="mt-2">For class enquiries and bookings, use the form below or email <a class="underline decoration-[#C6A34F] underline-offset-2" href="mailto:book@srinidhiisreeram.com">book@srinidhiisreeram.com</a>.</p>
-  <form action="mailto:book@srinidhiisreeram.com" method="post" enctype="text/plain" class="mt-6 space-y-4 bg-white p-6 rounded-2xl border">
-    <div>
-      <label class="block text-sm font-medium">Name</label>
-      <input required name="name" class="mt-1 w-full border rounded-lg p-2" placeholder="Your name">
-    </div>
-    <div>
-      <label class="block text-sm font-medium">Email</label>
-      <input required type="email" name="email" class="mt-1 w-full border rounded-lg p-2" placeholder="you@example.com">
-    </div>
-    <div>
-      <label class="block text-sm font-medium">Enquiry Type</label>
-      <select name="type" class="mt-1 w-full border rounded-lg p-2">
-        <option>Classes</option>
-        <option>Performance Booking</option>
-        <option>Workshop / Lecture-Demo</option>
-        <option>Other</option>
-      </select>
-    </div>
-    <div>
-      <label class="block text-sm font-medium">Message</label>
-      <textarea name="message" class="mt-1 w-full border rounded-lg p-2" rows="5" placeholder="Share details…"></textarea>
-    </div>
-    <button class="bg-[#7A1F2B] text-white px-4 py-2 rounded-lg hover:bg-[#641622]">Send</button>
-  </form>
-</main>
-
-<footer class="mt-16 border-t border-[#E6D5AC]">
-  <div class="max-w-6xl mx-auto px-4 py-8 grid md:grid-cols-3 gap-6 text-sm">
-    <div>
-      <div class="font-semibold">Based in London</div>
-      <div>Available for performances, workshops, and classes.</div>
-    </div>
-    <div>
-      <div class="font-semibold">Quick Links</div>
-      <ul class="space-y-1 mt-2">
-        <li><a class="hover:text-[#7A1F2B]" href="classes.html">Bharatanatyam Classes</a></li>
-        <li><a class="hover:text-[#7A1F2B]" href="performances.html">Performance Gallery</a></li>
-        <li><a class="hover:text-[#7A1F2B]" href="bookings.html">Book for Events</a></li>
-      </ul>
-    </div>
-    <div>
-      <div class="font-semibold">Contact</div>
-      <div>Email: <a class="underline decoration-[#C6A34F] underline-offset-2" href="mailto:book@srinidhiisreeram.com">book@srinidhiisreeram.com</a></div>
-      <div>Instagram: <a class="underline decoration-[#C6A34F] underline-offset-2" href="#">@srinidhiisreeram</a></div>
-    </div>
-  </div>
-  <div class="text-center text-xs text-gray-500 pb-6">© Srinidhii Sreeram London</div>
-</footer>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Contact — Srinidhii Sreeram</title><meta name="description" content="Enquiries for performances, workshops, and classes"><meta property="og:title" content="Contact — Srinidhii Sreeram"><meta property="og:description" content="Enquiries for performances, workshops, and classes"><meta property="og:image" content="assets/img/ppt-10822f32fe.png"><meta name="twitter:card" content="summary_large_image"><script src="https://cdn.tailwindcss.com"></script><style>:root{--bg:#FFF8F0;--maroon:#7A1F2B;--maroon-d:#641622;--gold:#C6A34F;--line:#E6D5AC;}
+body{background:var(--bg);}
+hr.kolam{border:0;height:1px;background:linear-gradient(90deg,transparent,var(--gold),transparent);}
+.link-gold{text-decoration:underline;text-decoration-color:var(--gold);text-underline-offset:3px;}
+.btn-primary{background:var(--maroon);color:#fff;border-radius:0.6rem;padding:.6rem 1rem;}
+.btn-primary:hover{background:var(--maroon-d);}
+.card{background:#fff;border:1px solid var(--line);border-radius:1rem;padding:1rem;box-shadow:0 4px 10px rgba(0,0,0,.04);}</style></head><body class="text-gray-900 antialiased">
+<header class="sticky top-0 z-30 bg-[var(--bg)]/95 backdrop-blur border-b border-[var(--line)]"><div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between"><a href="index.html" class="font-serif text-xl md:text-2xl tracking-wide">Srinidhii Sreeram</a><nav class="space-x-5 text-sm md:text-base"><a href="about.html" class="hover:text-[var(--maroon)]">About</a><a href="performances.html" class="hover:text-[var(--maroon)]">Featured Performances</a><a href="contact.html" class="btn-primary">Contact</a></nav></div></header><main class="max-w-3xl mx-auto px-4 py-12"><h1 class="font-serif text-3xl">Contact</h1><p class="mt-2">Please use the form or email <a class="link-gold" href="mailto:srinidhiisreeram@gmail.com">srinidhiisreeram@gmail.com</a>.</p><form action="mailto:srinidhiisreeram@gmail.com" method="post" enctype="text/plain" class="mt-6 space-y-4 card"><div><label class="block text-sm font-medium">Name</label><input required name="name" class="mt-1 w-full border rounded-lg p-2" placeholder="Your name"></div><div><label class="block text-sm font-medium">Email</label><input required type="email" name="email" class="mt-1 w-full border rounded-lg p-2" placeholder="you@example.com"></div><div><label class="block text-sm font-medium">Message</label><textarea name="message" rows="5" class="mt-1 w-full border rounded-lg p-2" placeholder="Your enquiry…"></textarea></div><button class="btn-primary">Send</button></form></main>
+<footer class="mt-16 border-t border-[var(--line)]"><div class="max-w-6xl mx-auto px-4 py-8 grid md:grid-cols-3 gap-6 text-sm"><div><div class="font-semibold">Based in London</div><div>Performances • Workshops • Classes</div></div><div><div class="font-semibold">Explore</div><ul class="mt-2 space-y-1"><li><a class="hover:text-[var(--maroon)]" href="performances.html">Featured Performances</a></li><li><a class="hover:text-[var(--maroon)]" href="about.html">About</a></li></ul></div><div><div class="font-semibold">Contact</div><div>Email: <a class="link-gold" href="mailto:srinidhiisreeram@gmail.com">srinidhiisreeram@gmail.com</a></div><div>Instagram: <a class="link-gold" href="https://instagram.com/srinidhii.sreeram">@srinidhii.sreeram</a></div></div></div><div class="text-center text-xs text-gray-500 pb-6">© Srinidhii Sreeram</div></footer></body></html>
