--- a/index.html
+++ b/index.html
@@ -1,115 +1,9 @@
-<!doctype html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Srinidhii Sreeram — Bharatanatyam Artist & Teacher in London</title>
-<meta name="description" content="Bharatanatyam performer and teacher in London. Classes for children and adults; bookings for performances, workshops, and lecture-demonstrations.">
-<meta name="keywords" content="Bharatanatyam, Bharatanatyam London, Indian classical dance, Bharatanatyam classes London, Bharatanatyam performer London">
-<meta property="og:title" content="Srinidhii Sreeram — Bharatanatyam Artist & Teacher in London">
-<meta property="og:description" content="Bharatanatyam performer and teacher in London. Classes for children and adults; bookings for performances, workshops, and lecture-demonstrations.">
-<meta property="og:type" content="website">
-<meta property="og:image" content="srinidhii-1-1600.webp">
-<meta name="twitter:card" content="summary_large_image">
-<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🩰</text></svg>">
-<script src="https://cdn.tailwindcss.com"></script>
-<script type="application/ld+json">{"@context": "https://schema.org", "@type": "Person", "name": "Srinidhii Sreeram", "jobTitle": "Bharatanatyam Artist", "knowsAbout": ["Bharatanatyam", "Indian classical dance", "Abhinaya", "Nritta"], "image": "srinidhii-1-1600.webp", "url": "index.html"}</script>
-</head>
-<body class="bg-[#FFF8F0] text-gray-900 antialiased">
-<header class="sticky top-0 z-30 bg-[#FFF8F0]/90 backdrop-blur border-b border-[#E6D5AC]">
-  <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
-    <a href="index.html" class="font-serif text-xl md:text-2xl tracking-wide">Srinidhii Sreeram</a>
-    <nav class="space-x-4 text-sm md:text-base">
-      <a href="about.html" class="hover:text-[#7A1F2B]">About</a>
-      <a href="performances.html" class="hover:text-[#7A1F2B]">Performances</a>
-      <a href="classes.html" class="hover:text-[#7A1F2B]">Classes</a>
-      <a href="bookings.html" class="hover:text-[#7A1F2B]">Bookings</a>
-      <a href="contact.html" class="inline-block bg-[#7A1F2B] text-white px-3 py-1.5 rounded-lg hover:bg-[#641622]">Contact</a>
-    </nav>
-  </div>
-</header>
-
-<section class="relative">
-  <img src="srinidhii-1-1600.webp" alt="Bharatanatyam performance by Srinidhii Sreeram" class="w-full h-[60vh] object-cover brightness-75">
-  <div class="absolute inset-0 flex items-center">
-    <div class="max-w-6xl mx-auto px-4">
-      <h1 class="text-white text-3xl md:text-5xl font-serif drop-shadow">Bharatanatyam Artist & Teacher in London</h1>
-      <p class="text-white/95 mt-3 max-w-2xl">Bharatanatyam performer and teacher in London. Classes for children and adults; bookings for performances, workshops, and lecture-demonstrations.</p>
-      <div class="mt-6 space-x-3">
-        <a href="classes.html" class="bg-[#7A1F2B] text-white px-4 py-2 rounded-lg hover:bg-[#641622]">Enquire about Classes</a>
-        <a href="bookings.html" class="bg-white text-[#7A1F2B] px-4 py-2 rounded-lg hover:bg-[#FBF2DF] border border-[#7A1F2B]">Book a Performance</a>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="max-w-6xl mx-auto px-4 py-12 grid md:grid-cols-2 gap-10">
-  <div>
-    <h2 class="font-serif text-2xl">About Srinidhii Sreeram</h2>
-    <p class="mt-3">Senior disciple of <em>Kalaimamani Smt. Padmini Krishnamurthy</em>, Director Sri Saraswathi Gana Nilayam, Chennai & Sri Saraswathi Natyalaya, Muscat. Srinidhii Sreeram began learning at the age of 6 and has since performed across India, Oman, Dubai, the USA and the UK, including the prestigious Cleveland Thyagaraja Festival.</p>
-    <p class="mt-3">Recognised with the <strong>Young Artist Grant (Government of Tamil Nadu)</strong> and graded by the Government of India. Completed all 6 levels of the Prayathnam Dance Examinations and conferred the title <strong>‘Yathna Praveena’</strong>.</p>
-    <a href="about.html" class="mt-4 inline-block text-[#7A1F2B] underline decoration-[#C6A34F] underline-offset-2">Read full biography</a>
-  </div>
-  <div class="grid grid-cols-2 gap-4">
-    <img src="srinidhii-1-800.webp" class="rounded-xl shadow" alt="Srinidhii performing 1">
-    <img src="srinidhii-2-800.webp" class="rounded-xl shadow" alt="Srinidhii performing 2">
-    <img src="srinidhii-3-800.webp" class="rounded-xl shadow" alt="Srinidhii performing 3">
-  </div>
-</section>
-
-<section class="bg-[#FBF2DF] border-y border-[#E6D5AC]">
-  <div class="max-w-6xl mx-auto px-4 py-12">
-    <h2 class="font-serif text-2xl">Offerings</h2>
-    <div class="grid md:grid-cols-3 gap-6 mt-6">
-      <div class="p-5 bg-white rounded-2xl shadow-sm border">
-        <h3 class="font-semibold">Performances</h3>
-        <p class="mt-2 text-sm">Solo and thematic productions for festivals, venues, and cultural events.</p>
-        <a href="bookings.html" class="mt-3 inline-block text-[#7A1F2B] underline decoration-[#C6A34F] underline-offset-2">Request booking</a>
-      </div>
-      <div class="p-5 bg-white rounded-2xl shadow-sm border">
-        <h3 class="font-semibold">Workshops & Lecture-Demos</h3>
-        <p class="mt-2 text-sm">Educational sessions for schools, universities, and community groups.</p>
-        <a href="bookings.html" class="mt-3 inline-block text-[#7A1F2B] underline decoration-[#C6A34F] underline-offset-2">Plan a workshop</a>
-      </div>
-      <div class="p-5 bg-white rounded-2xl shadow-sm border">
-        <h3 class="font-semibold">Classes</h3>
-        <p class="mt-2 text-sm">Children (4+), teens & adults. In-person in London and online.</p>
-        <a href="classes.html" class="mt-3 inline-block text-[#7A1F2B] underline decoration-[#C6A34F] underline-offset-2">Enquire about classes</a>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="max-w-6xl mx-auto px-4 py-12">
-  <h2 class="font-serif text-2xl">Highlights</h2>
-  <ul class="list-disc pl-6 mt-4 space-y-2">
-    <li>Invited performer — Cleveland Thyagaraja Festival, USA</li>
-    <li>Young Artist Grant — Government of Tamil Nadu</li>
-    <li>Graded Artist — Government of India</li>
-  </ul>
-</section>
-
-<footer class="mt-16 border-t border-[#E6D5AC]">
-  <div class="max-w-6xl mx-auto px-4 py-8 grid md:grid-cols-3 gap-6 text-sm">
-    <div>
-      <div class="font-semibold">Based in London</div>
-      <div>Available for performances, workshops, and classes.</div>
-    </div>
-    <div>
-      <div class="font-semibold">Quick Links</div>
-      <ul class="space-y-1 mt-2">
-        <li><a class="hover:text-[#7A1F2B]" href="classes.html">Bharatanatyam Classes</a></li>
-        <li><a class="hover:text-[#7A1F2B]" href="performances.html">Performance Gallery</a></li>
-        <li><a class="hover:text-[#7A1F2B]" href="bookings.html">Book for Events</a></li>
-      </ul>
-    </div>
-    <div>
-      <div class="font-semibold">Contact</div>
-      <div>Email: <a class="underline decoration-[#C6A34F] underline-offset-2" href="mailto:book@srinidhiisreeram.com">book@srinidhiisreeram.com</a></div>
-      <div>Instagram: <a class="underline decoration-[#C6A34F] underline-offset-2" href="#">@srinidhiisreeram</a></div>
-    </div>
-  </div>
-  <div class="text-center text-xs text-gray-500 pb-6">© Srinidhii Sreeram London</div>
-</footer>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Srinidhii Sreeram — Bharatanatyam Artist</title><meta name="description" content="Bharatanatyam artist & teacher. Performances, workshops, and training."><meta property="og:title" content="Srinidhii Sreeram — Bharatanatyam Artist"><meta property="og:description" content="Bharatanatyam artist & teacher. Performances, workshops, and training."><meta property="og:image" content="assets/img/ppt-10822f32fe.png"><meta name="twitter:card" content="summary_large_image"><script src="https://cdn.tailwindcss.com"></script><style>:root{--bg:#FFF8F0;--maroon:#7A1F2B;--maroon-d:#641622;--gold:#C6A34F;--line:#E6D5AC;}
+body{background:var(--bg);}
+hr.kolam{border:0;height:1px;background:linear-gradient(90deg,transparent,var(--gold),transparent);}
+.link-gold{text-decoration:underline;text-decoration-color:var(--gold);text-underline-offset:3px;}
+.btn-primary{background:var(--maroon);color:#fff;border-radius:0.6rem;padding:.6rem 1rem;}
+.btn-primary:hover{background:var(--maroon-d);}
+.card{background:#fff;border:1px solid var(--line);border-radius:1rem;padding:1rem;box-shadow:0 4px 10px rgba(0,0,0,.04);}</style></head><body class="text-gray-900 antialiased">
+<header class="sticky top-0 z-30 bg-[var(--bg)]/95 backdrop-blur border-b border-[var(--line)]"><div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between"><a href="index.html" class="font-serif text-xl md:text-2xl tracking-wide">Srinidhii Sreeram</a><nav class="space-x-5 text-sm md:text-base"><a href="about.html" class="hover:text-[var(--maroon)]">About</a><a href="performances.html" class="hover:text-[var(--maroon)]">Featured Performances</a><a href="contact.html" class="btn-primary">Contact</a></nav></div></header><section class="relative"><img src="assets/img/ppt-10822f32fe.png" alt="Hero image" class="w-full h-[60vh] object-cover brightness-75"><div class="absolute inset-0 flex items-center"><div class="max-w-6xl mx-auto px-4"><h1 class="text-white text-3xl md:text-5xl font-serif drop-shadow">Bharatanatyam Artist & Teacher</h1><p class="text-white/95 mt-3 max-w-2xl">Performances • Workshops • Classes in London and worldwide</p><div class="mt-6 space-x-3"><a href="performances.html" class="btn-primary">Featured Performances</a><a href="contact.html" class="bg-white text-[var(--maroon)] border border-[var(--maroon)] rounded-lg px-4 py-2 hover:bg-[#FBF2DF]">Contact</a></div></div></div></section><section class="max-w-6xl mx-auto px-4 py-12 grid md:grid-cols-2 gap-10"><div><h2 class="font-serif text-2xl">About</h2><p class="mt-3">Srinidhii  Sreeram  is a Bharatanatyam dancer whose artistry is marked by a strong command of rhythm, a nuanced approach to abhinaya, and an energetic stage presence. A senior disciple of Smt. Padmini Krishnamurthy, she began her training at the age of six and has since performed widely across India, the Middle East, the United Kingdom, and the United States.  Beyond performance,  Srinidhii  is an engaging teacher who brings patience, joy, and creativity into her classes. Her teaching blends discipline with joy, encouraging students to discover their strengths while nurturing a deep respect for the art form. Now based in London,  Srinidhii  continues to expand her practice as both performer and educator, seeking to share Bharatanatyam as a living dialogue between tradition and today’s world — an art form that resonates across cultures and generations.</p><a href="about.html" class="mt-4 inline-block link-gold">Read full biography</a></div><div class="grid grid-cols-2 gap-4"><img src="assets/img/ppt-10822f32fe.png" class="rounded-xl shadow" alt="Image"><img src="assets/img/ppt-7da5e17065.png" class="rounded-xl shadow" alt="Image"><img src="assets/img/ppt-968c38e76a.png" class="rounded-xl shadow" alt="Image"><img src="assets/img/ppt-3d4b425a89.png" class="rounded-xl shadow" alt="Image"></div></section>
+<footer class="mt-16 border-t border-[var(--line)]"><div class="max-w-6xl mx-auto px-4 py-8 grid md:grid-cols-3 gap-6 text-sm"><div><div class="font-semibold">Based in London</div><div>Performances • Workshops • Classes</div></div><div><div class="font-semibold">Explore</div><ul class="mt-2 space-y-1"><li><a class="hover:text-[var(--maroon)]" href="performances.html">Featured Performances</a></li><li><a class="hover:text-[var(--maroon)]" href="about.html">About</a></li></ul></div><div><div class="font-semibold">Contact</div><div>Email: <a class="link-gold" href="mailto:srinidhiisreeram@gmail.com">srinidhiisreeram@gmail.com</a></div><div>Instagram: <a class="link-gold" href="https://instagram.com/srinidhii.sreeram">@srinidhii.sreeram</a></div></div></div><div class="text-center text-xs text-gray-500 pb-6">© Srinidhii Sreeram</div></footer></body></html>
