--- a/gallery.html
+++ b/gallery.html
@@ -118,10 +118,36 @@
   });
 </script>
 
-<footer class="mt-16 border-t">
-  <div class="max-w-6xl mx-auto px-6 py-10 text-sm text-gray-600">
-    © Srinidhii Sreeram
+
+<footer class="mt-16 bg-[#111] text-[#ddd]">
+  <div class="max-w-6xl mx-auto px-6 py-12 grid gap-10 md:grid-cols-2">
+    <div>
+      <h3 class="text-white font-semibold mb-4">Explore</h3>
+      <ul class="space-y-2 text-sm">
+        <li><a class="hover:underline" href="/about.html">About</a></li>
+        <li><a class="hover:underline" href="/gallery.html">Gallery</a></li>
+        <li><a class="hover:underline" href="/contact.html">Contact</a></li>
+      </ul>
+    </div>
+    <div>
+      <h3 class="text-white font-semibold mb-4">Contact</h3>
+      <p class="text-sm">London, United Kingdom</p>
+      <p class="text-sm mt-1"><a class="hover:underline" href="mailto:srinidhiisreeram@gmail.com">srinidhiisreeram@gmail.com</a></p>
+      <div class="mt-4 flex items-center gap-4">
+        <a href="https://instagram.com/srinidhii.sreeram" target="_blank" rel="noopener" aria-label="Instagram" class="text-[#ddd] hover:text-white">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22" fill="currentColor">
+            <path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 2h10c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3zm11 2a1 1 0 100 2 1 1 0 000-2zM12 7a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6z"/>
+          </svg>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="border-t border-white/10">
+    <div class="max-w-6xl mx-auto px-6 py-6 text-xs text-[#aaa]">
+      © Srinidhii Sreeram
+    </div>
   </div>
 </footer>
+
 </body>
 </html>
