--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contact — Srinidhii Sreeram</title>
-  <meta name="description" content="Contact Srinidhii Sreeram for Bharatanatyam classes, performances and workshops.">
-  <link rel='canonical' href='https://srinidhii-site.vercel.app/contact.html'>
+  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='canonical' href='https://srinidhii-site.vercel.app/contact.html'>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     :root { --bg:#F6ECE5; --copper:#C4682D; --copper-d:#9F4F1E; --text:#2B2B2B; }
@@ -16,6 +13,66 @@
     .btn:hover { background:var(--copper-d); }
     .card { background:#fff; border-radius:1rem; box-shadow:0 10px 20px rgba(0,0,0,.06); }
   </style>
+
+  <title>Contact — Srinidhii Sreeram | Performances & Classes</title>
+  <link rel="canonical" href="https://srinidhii-site.vercel.app/contact.html">
+
+  <meta name="description" content="Book Srinidhii Sreeram for Bharatanatyam performances, workshops, and classes in London and worldwide.">
+  <meta name="keywords" content="Bharatanatyam, Indian classical dance, Srinidhii Sreeram, London, dancer, abhinaya, nrtta, classes, performances">
+  <meta name="author" content="Srinidhii Sreeram">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Contact — Srinidhii Sreeram | Performances & Classes">
+  <meta property="og:description" content="Book Srinidhii Sreeram for Bharatanatyam performances, workshops, and classes in London and worldwide.">
+  <meta property="og:url" content="https://srinidhii-site.vercel.app/contact.html">
+  <meta property="og:image" content="https://srinidhii-site.vercel.app/home1.png">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Contact — Srinidhii Sreeram | Performances & Classes">
+  <meta name="twitter:description" content="Book Srinidhii Sreeram for Bharatanatyam performances, workshops, and classes in London and worldwide.">
+  <meta name="twitter:image" content="https://srinidhii-site.vercel.app/home1.png">
+
+  <script type="application/ld+json">
+  {
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Srinidhii Sreeram",
+  "jobTitle": "Bharatanatyam Dancer",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "London",
+    "addressCountry": "UK"
+  },
+  "url": "https://srinidhii-site.vercel.app",
+  "image": "https://srinidhii-site.vercel.app/home1.png",
+  "sameAs": [
+    "https://instagram.com/srinidhii.sreeram"
+  ],
+  "knowsAbout": [
+    "Bharatanatyam",
+    "Indian classical dance",
+    "Abhinaya",
+    "Nrtta",
+    "Performance"
+  ]
+}
+  </script>
+  <script type="application/ld+json">
+  {
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "url": "https://srinidhii-site.vercel.app",
+  "name": "Srinidhii Sreeram",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://srinidhii-site.vercel.app/?q={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+  </script>
+
 </head>
 <body class="antialiased">
 <header class="sticky top-0 z-30 bg-[var(--bg)]/95 backdrop-blur border-b">
