--- a/index.html
+++ b/index.html
@@ -1,4 +1,64 @@
-<!doctype html><html lang='en'><head><meta charset='utf-8'><meta name='viewport' content='width=device-width, initial-scale=1'><title>Srinidhii Sreeram</title><meta name='description' content='Bharatanatyam artist and teacher based in London. Performances, classes, and workshops.'><script src='https://cdn.tailwindcss.com'></script><style>:root{--bg:#F6ECE5;--copper:#C4682D;--copper-d:#9F4F1E;--text:#2B2B2B;}body{background:var(--bg);color:var(--text);}.nav-link{color:var(--copper);font-weight:600;}.nav-link.active{text-decoration:underline;text-underline-offset:6px;}.btn{background:var(--copper);color:#fff;padding:.6rem 1.2rem;border-radius:.6rem;}.btn:hover{background:var(--copper-d);}.card{background:#fff;border-radius:1rem;box-shadow:0 10px 20px rgba(0,0,0,.05);}</style></head><body class='antialiased'><header class='sticky top-0 z-30 bg-[var(--bg)]/95 backdrop-blur border-b'><div class='max-w-6xl mx-auto px-6 py-4 flex items-center gap-10'><a href='index.html' class='nav-link active'>Home</a><a href='about.html' class='nav-link '>About me</a><a href='gallery.html' class='nav-link '>Gallery</a><a href='contact.html' class='nav-link '>Contact us</a></div></header><section class='grid grid-cols-1 md:grid-cols-3 gap-6 px-6 pt-6'><img src='home1.png' class='w-full h-[70vh] object-cover' alt='Photo'><img src='home2.png' class='w-full h-[70vh] object-cover' alt='Photo'><img src='home3.png' class='w-full h-[70vh] object-cover' alt='Photo'></section><section class='max-w-4xl mx-auto px-6 py-12 text-left'><h2 class='text-3xl font-serif mb-4'>About</h2><p class='leading-8'>Srinidhii Sreeram is a Bharatanatyam dancer whose artistry is defined by rhythmic precision, expressive abhinaya, and an engaging stage presence. She began her training at the age of 6 under the guidance of Smt. Padmini Krishnamurthy, Director of Sri Saraswathi Gana Nilayam (Chennai) and Sri Saraswathi Natyalaya (Muscat).<br><br>Srinidhii has performed worldwide at India, Muscat, Dubai, and the United States, including an acclaimed recital at the Cleveland Thyagaraja Festival (USA). Srinidhii continues to share the timeless grace of Bharatanatyam, bridging classical tradition with a contemporary sensibility that resonates with today’s audiences.</p></section>
+<!doctype html><html lang='en'><head><meta charset='utf-8'><meta name='viewport' content='width=device-width, initial-scale=1'><script src='https://cdn.tailwindcss.com'></script><style>:root{--bg:#F6ECE5;--copper:#C4682D;--copper-d:#9F4F1E;--text:#2B2B2B;}body{background:var(--bg);color:var(--text);}.nav-link{color:var(--copper);font-weight:600;}.nav-link.active{text-decoration:underline;text-underline-offset:6px;}.btn{background:var(--copper);color:#fff;padding:.6rem 1.2rem;border-radius:.6rem;}.btn:hover{background:var(--copper-d);}.card{background:#fff;border-radius:1rem;box-shadow:0 10px 20px rgba(0,0,0,.05);}</style>
+  <title>Srinidhii Sreeram — Bharatanatyam Dancer (London)</title>
+  <link rel="canonical" href="https://srinidhii-site.vercel.app">
+
+  <meta name="description" content="Official website of Srinidhii Sreeram — London-based Bharatanatyam dancer and educator. Performances, classes, bookings, and a gallery of select works.">
+  <meta name="keywords" content="Bharatanatyam, Indian classical dance, Srinidhii Sreeram, London, dancer, abhinaya, nrtta, classes, performances">
+  <meta name="author" content="Srinidhii Sreeram">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Srinidhii Sreeram — Bharatanatyam Dancer (London)">
+  <meta property="og:description" content="Official website of Srinidhii Sreeram — London-based Bharatanatyam dancer and educator. Performances, classes, bookings, and a gallery of select works.">
+  <meta property="og:url" content="https://srinidhii-site.vercel.app">
+  <meta property="og:image" content="https://srinidhii-site.vercel.app/home1.png">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Srinidhii Sreeram — Bharatanatyam Dancer (London)">
+  <meta name="twitter:description" content="Official website of Srinidhii Sreeram — London-based Bharatanatyam dancer and educator. Performances, classes, bookings, and a gallery of select works.">
+  <meta name="twitter:image" content="https://srinidhii-site.vercel.app/home1.png">
+
+  <script type="application/ld+json">
+  {
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Srinidhii Sreeram",
+  "jobTitle": "Bharatanatyam Dancer",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "London",
+    "addressCountry": "UK"
+  },
+  "url": "https://srinidhii-site.vercel.app",
+  "image": "https://srinidhii-site.vercel.app/home1.png",
+  "sameAs": [
+    "https://instagram.com/srinidhii.sreeram"
+  ],
+  "knowsAbout": [
+    "Bharatanatyam",
+    "Indian classical dance",
+    "Abhinaya",
+    "Nrtta",
+    "Performance"
+  ]
+}
+  </script>
+  <script type="application/ld+json">
+  {
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "url": "https://srinidhii-site.vercel.app",
+  "name": "Srinidhii Sreeram",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://srinidhii-site.vercel.app/?q={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+  </script>
+
+</head><body class='antialiased'><header class='sticky top-0 z-30 bg-[var(--bg)]/95 backdrop-blur border-b'><div class='max-w-6xl mx-auto px-6 py-4 flex items-center gap-10'><a href='index.html' class='nav-link active'>Home</a><a href='about.html' class='nav-link '>About me</a><a href='gallery.html' class='nav-link '>Gallery</a><a href='contact.html' class='nav-link '>Contact us</a></div></header><section class='grid grid-cols-1 md:grid-cols-3 gap-6 px-6 pt-6'><img src='home1.png' class='w-full h-[70vh] object-cover' alt='Photo'><img src='home2.png' class='w-full h-[70vh] object-cover' alt='Photo'><img src='home3.png' class='w-full h-[70vh] object-cover' alt='Photo'></section><section class='max-w-4xl mx-auto px-6 py-12 text-left'><h2 class='text-3xl font-serif mb-4'>About</h2><p class='leading-8'>Srinidhii Sreeram is a Bharatanatyam dancer whose artistry is defined by rhythmic precision, expressive abhinaya, and an engaging stage presence. She began her training at the age of 6 under the guidance of Smt. Padmini Krishnamurthy, Director of Sri Saraswathi Gana Nilayam (Chennai) and Sri Saraswathi Natyalaya (Muscat).<br><br>Srinidhii has performed worldwide at India, Muscat, Dubai, and the United States, including an acclaimed recital at the Cleveland Thyagaraja Festival (USA). Srinidhii continues to share the timeless grace of Bharatanatyam, bridging classical tradition with a contemporary sensibility that resonates with today’s audiences.</p></section>
 
 <footer class="mt-10 bg-[#111] text-[#ddd]">
   <div class="max-w-6xl mx-auto px-6 py-8 grid gap-6 md:grid-cols-2 items-start">
