--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contact — Srinidhii Sreeram</title>
-  <meta name="description" content="Contact Srinidhii Sreeram for Bharatanatyam classes, performances and workshops.">
-  <link rel='canonical' href='https://srinidhii-site.vercel.app/contact.html'>
+  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='canonical' href='https://srinidhii-site.vercel.app/contact.html'>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     :root { --bg:#F6ECE5; --copper:#C4682D; --copper-d:#9F4F1E; --text:#2B2B2B; }
@@ -16,14 +13,74 @@
     .btn:hover { background:var(--copper-d); }
     .card { background:#fff; border-radius:1rem; box-shadow:0 10px 20px rgba(0,0,0,.06); }
   </style>
+
+  <title>Contact — Srinidhii Sreeram | Performances & Classes</title>
+  <link rel="canonical" href="https://srinidhii-site.vercel.app/contact.html">
+
+  <meta name="description" content="Book Srinidhii Sreeram for Bharatanatyam performances, workshops, and classes in London and worldwide.">
+  <meta name="keywords" content="Bharatanatyam, Indian classical dance, Srinidhii Sreeram, London, dancer, abhinaya, nrtta, classes, performances">
+  <meta name="author" content="Srinidhii Sreeram">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Contact — Srinidhii Sreeram | Performances & Classes">
+  <meta property="og:description" content="Book Srinidhii Sreeram for Bharatanatyam performances, workshops, and classes in London and worldwide.">
+  <meta property="og:url" content="https://srinidhii-site.vercel.app/contact.html">
+  <meta property="og:image" content="https://srinidhii-site.vercel.app/home1.png">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Contact — Srinidhii Sreeram | Performances & Classes">
+  <meta name="twitter:description" content="Book Srinidhii Sreeram for Bharatanatyam performances, workshops, and classes in London and worldwide.">
+  <meta name="twitter:image" content="https://srinidhii-site.vercel.app/home1.png">
+
+  <script type="application/ld+json">
+  {
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Srinidhii Sreeram",
+  "jobTitle": "Bharatanatyam Dancer",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "London",
+    "addressCountry": "UK"
+  },
+  "url": "https://srinidhii-site.vercel.app",
+  "image": "https://srinidhii-site.vercel.app/home1.png",
+  "sameAs": [
+    "https://instagram.com/srinidhii.sreeram"
+  ],
+  "knowsAbout": [
+    "Bharatanatyam",
+    "Indian classical dance",
+    "Abhinaya",
+    "Nrtta",
+    "Performance"
+  ]
+}
+  </script>
+  <script type="application/ld+json">
+  {
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "url": "https://srinidhii-site.vercel.app",
+  "name": "Srinidhii Sreeram",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://srinidhii-site.vercel.app/?q={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+  </script>
+
 </head>
 <body class="antialiased">
 <header class="sticky top-0 z-30 bg-[var(--bg)]/95 backdrop-blur border-b">
   <div class="max-w-6xl mx-auto px-6 py-4 flex items-center gap-10">
     <a href="/" class="nav-link">Home</a>
-    <a href="about.html" class="nav-link">About</a>
+    <a href="about.html" class="nav-link">About me</a>
     <a href="gallery.html" class="nav-link">Gallery</a>
-    <a href="contact.html" class="nav-link active">Contact</a>
+    <a href="contact.html" class="nav-link active">Contact us</a>
   </div>
 </header>
 
@@ -31,14 +88,14 @@
 
 <section class="max-w-6xl mx-auto px-6 py-10 grid md:grid-cols-2 gap-8">
   <div class="flex justify-center md:justify-start">
-    <img src="contact-image.png" alt="Srinidhii performing" class="w-full max-w-[520px] max-h-[680px] object-contain" />
+    <img src="contact-image.png" alt="Srinidhii performing" class="w-full max-w-[520px] max-h-[680px] object-contain rounded-xl shadow-md" />
   </div>
   <div class="flex justify-center md:justify-start">
     <div class="card w-full max-w-xl p-8 self-start">
       <h1 class="text-4xl font-extrabold mb-4">Contact me</h1>
       <div class="h-1 w-16 bg-[var(--copper)] mb-6"></div>
-      
-      <p class="mb-2 text-[15px]">Please fill out the form below for any queries related to events, production or training.</p><p class="mb-1"><strong>Phone:</strong> <a href="tel:+447767976340">+44 7767 976 340</a></p><p class="mb-4"><strong>Email:</strong> <a href="mailto:srinidhiisreeram@gmail.com">srinidhiisreeram@gmail.com</a></p><form id="enquiry-form" class="grid grid-cols-1 md:grid-cols-2 gap-4" novalidate>
+      <p class="mb-4"><strong>Email:</strong> srinidhiisreeram@gmail.com</p>
+      <form id="enquiry-form" class="grid grid-cols-1 md:grid-cols-2 gap-4" novalidate>
         <input name="name" placeholder="Name" required class="border rounded p-3">
         <input type="email" name="email" placeholder="Email" required class="border rounded p-3">
         <input name="phone" placeholder="Phone Number including country code" class="border rounded p-3 md:col-span-2">
@@ -55,7 +112,7 @@
 
 
 <script>
-  const ENDPOINT = 'https://formspree.io/f/xanpdnvq'; // e.g. 'https://formspree.io/f/xxxxxxx'
+  const ENDPOINT = ''; // e.g. 'https://formspree.io/f/xxxxxxx'
   const form = document.getElementById('enquiry-form');
   const status = document.getElementById('form-status');
   const btn = document.getElementById('submit-btn');
@@ -82,9 +139,9 @@
     <div>
       <h3 class="text-white font-semibold mb-3">Explore</h3>
       <ul class="space-y-1.5 text-sm">
-        <li><a class="hover:underline" href="/about.html">About</a></li>
+        <li><a class="hover:underline" href="/about.html">About me</a></li>
         <li><a class="hover:underline" href="/gallery.html">Gallery</a></li>
-        <li><a class="hover:underline" href="/contact.html">Contact</a></li>
+        <li><a class="hover:underline" href="/contact.html">Contact us</a></li>
       </ul>
     </div>
     <div>
